@@ -29,6 +29,8 @@ void gretl_rand_uniform (double *a, int t1, int t2);
 int gretl_rand_uniform_minmax (double *a, int t1, int t2,
 			       double min, double max);
 
+int gretl_rand_int_minmax (int *a, int n, int min, int max);
+
 void gretl_rand_normal (double *a, int t1, int t2);
 
 int gretl_rand_normal_full (double *a, int t1, int t2,
